2 Local Kubernetes/unapplied-manifests/be-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      aline.component: server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        aline.component: server
    spec:
      containers:
      - name: user
        image: lyndasm/aline-user-microservice
        ports:
          - containerPort: 8070
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
          requests:
            cpu: "200m"
            memory: "512Mi"
      restartPolicy: Always
