2 Local Kubernetes/unapplied-manifests/fe-member-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-deployment
  namespace: aline
spec:
  replicas: 1
  selector:
    matchLabels:
      aline.component: client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        aline.component: client
    spec:
      containers:
      - name: member
        image: lyndasm/aline-member
        ports:
          - containerPort: 3007
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
          requests:
            cpu: "200m"
            memory: "512Mi"
      restartPolicy: Always
