2 Local Kubernetes/unapplied-manifests/mi-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      aline.component: gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        aline.component: gateway
    spec:
      containers:
      - name: gateway
        image: lyndasm/aline-gateway
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
          requests:
            cpu: "200m"
            memory: "512Mi"
      restartPolicy: Always
