2 Local Kubernetes/unapplied-manifests/mi-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      aline.component: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        aline.component: mysql
    spec:
      containers:
      - name: mysql
        image: lyndasm/aline-mysql
        ports:
          - containerPort: 3306
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
          requests:
            cpu: "200m"
            memory: "512Mi"
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: db-data
            subPath: mysql
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
